Made a basic setup for working with DB Connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# Spring application name
 spring.application.name=demo
+
+# Database Configuration (CockroachDB or PostgreSQL)
+spring.datasource.url=jdbc:postgresql://glazed-crow-2584.j77.aws-ap-south-1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full&sslrootcert=C:/Cloud\ Drive/Mega/root.crt
+spring.datasource.username=anuzz
+spring.datasource.password=qWWsuwh5UwASfjXL6UdnIg
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Enable SQL logging (for SQL queries)
+logging.level.org.hibernate.SQL=DEBUG
+
+# Enable SQL parameter logging (to see bound parameters)
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Log connection-related activity (for PostgreSQL connection)
+logging.level.org.hibernate.engine.jdbc.connections=DEBUG
+
+# Log Spring framework logs
+logging.level.org.springframework=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
+
+# Reduce verbosity of Spring Boot auto-configuration logs
+logging.level.org.springframework.boot.autoconfigure=INFO
