Experimented with Kafka Asynchronus Communication and URL Connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-# Spring application name
+server.port=8081
 spring.application.name=demo
+
+# target microservice configuration
+target.microservice.name=microservice
+target.microservice.host=localhost
+target.microservice.port=8082
+target.microservice.base-path=/api/solar
+
 
 # Database Configuration (CockroachDB or PostgreSQL)
 spring.datasource.url=jdbc:postgresql://glazed-crow-2584.j77.aws-ap-south-1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full&sslrootcert=C:/Cloud\ Drive/Mega/root.crt
@@ -28,3 +35,20 @@ logging.level.org.springframework.orm.jpa=DEBUG
 
 # Reduce verbosity of Spring Boot auto-configuration logs
 logging.level.org.springframework.boot.autoconfigure=INFO
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Consumer
+spring.kafka.consumer.group-id=earth-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Topics
+kafka.topic.request=blackhole-requests
+kafka.topic.response=blackhole-responses
+
